--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "chokidar": "^1.6.1",
     "chokidar-cli": "^1.2.0",
     "enb": "^1.3.0",
+    "enb-bem-i18n": "^1.1.1",
     "enb-bem-techs": "^2.2.1",
     "enb-bemxjst": "^8.6.7",
+    "enb-bemxjst-i18n": "tadatuta/enb-bemxjst-i18n#0dc65e72afaa7cc9282eddc0335d98de8193bed3",
     "enb-borschik": "^3.0.0",
     "enb-js": "^1.1.0",
+    "enb-modules": "^0.4.1",
     "enb-postcss": "^2.0.0",
     "eslint": "^4.1.1",
     "eslint-config-pedant": "^0.10.0",
